Final spacing fixes for tutorials

--- a/css/style.css
+++ b/css/style.css
@@ -925,6 +925,8 @@ h2 { margin-bottom: 0; margin-top: 0;}
 	font-style			: normal;
 }*/
 
+.Tutorials h1 { line-height: 1em } 
+
 #Tutorials h2.with-nav { margin-bottom: 0; }
 #Tutorials .onecol { clear: both; }
 #Tutorials table { 
